--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,21 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 @layer base {
+  html {
+    @apply h-full;
+  }
   body {
-    @apply bg-blue-700;
+    @apply h-full min-h-full bg-primary text-white;
+  }
+
+  #root {
+    @apply h-full min-h-full flex flex-col;
   }
 }
 
