added context and adjusted styles

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 @layer base {
   :root {
     --primary-color: #f2f3f3;
-    --secondary-color: #e2e2e2;
+    --secondary-color: #acacac;
     --accent-color: #000;
     --text-color: #000;
     --text-accent: #fff;
