--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
     --text-accent-nightfall: #f1faee;
 
     --primary-twilight: #150e17;
-    --secondary-twilight: #959296;
+    --secondary-twilight: #2f2333;
     --accent-twilight: #861aa7;
     --text-twilight: #fff;
     --text-accent-twilight: #fff;
